--- a/data.tex
+++ b/data.tex
@@ -12,14 +12,14 @@ The raw data download from Backblaze contained 54,398 unique drives.  Before ana
 The final sample included 21 hard drive models.  Below is a summary of the distribution of failures, and total testing time for each model.  The total number of failures was 1030.  The majority of those failures came from models 5, 7, 9, and 11.  Not surprising, model 11, which had the most failures also had the longest total testing time; however, this relationship was not uniform across models.  Model 1 had the 2nd longest total testing time, but relatively few failures.
 \begin{figure}[H]
 \centering
-\includegraphics[height=12cm]{sumstat1.pdf}
+\includegraphics[height=10cm]{sumstat1.pdf}
 \end{figure}
-\noindent We also examined the distribution of failure times.  The shape is slightly skewed to the right with the majority of failures occurring within 250 days. But this distribution is not consistent across models. As exemplified when looking at just model 11, the failure times vary depending on the brand of the hard drive.  This provides further evidence that a separate model should be fit for each brand.
+\noindent We also examined the distribution of failure times.  The shape is slightly skewed to the right with the majority of failures occurring within 250 days. However, with over 50,000 of the hard drives start times left truncated it is specious to infer that the failire times suffer from infant mortality.   
 \begin{figure}[H]
 \centering
-\includegraphics[height=12cm]{sumstat3.pdf}
+\includegraphics[height=8cm]{failhist.pdf}
 \end{figure}
-
+\noindent \textit{Model:}\\\\
 We used a Bayesian modeling approach to estimate the Weibull parameters for each model. Rather than modeling each model independently, we modeled the Weibull parameters hierarchically, to pool information and to provide better inferences, particularly for the brands that produced few failures. The model was fit using the rstan package in R \cite{stan}.
 
 We parameterized the Weibull in terms of a lower log quantile, $t_p$ (where $p=0.01$), and scale, $\sigma$. These were modeled by a Student's t with 5 degrees of freedom and a lognormal, respectively.
@@ -32,6 +32,47 @@ We parameterized the Weibull in terms of a lower log quantile, $t_p$ (where $p=0
 The following uninformative and vague priors were used for the hyperparameters.
 \[p(\mu_1,\mu_2) \propto 1\]
 \[\tau_1,\tau_2 \stackrel{ind.}{\sim} \operatorname{half-Cauchy}(0,10)\]
+
+\noindent \textit{Results:}\\\\
+Stan's Hamiltonian MCMC produces posterior distributions for each model's parameters.  Since $\eta$ is extremly far away from the majority of the data we focus on the posterior distribution of $t_p$ (where $p=0.01$) and $\beta$.  The plot below shows the median of the posterior estimate (in hours) along with error bars corresponding to the middle 50\% of the distribution.  Model 2 has the highest time to reach the .01 quatile, while Model 12 is the fastest.  The error bars are commensurate to the number of observations in the data.  Model 11 is the most tested model and has a narrow posterior while Model 2 has a range from about 2,500 to 13,000 hours.
+\begin{figure}[H]
+\centering
+\includegraphics[height=8cm]{postquant.pdf}
+\end{figure}
+
+\noindent We can also compare the posteriors of estimated $\beta$ across models.  A line at $\beta=1$ differntiates between models with infant mortality versus those with a hazard that increases over time.  Again, with so few faiures, these results have large margin of errors; however, it does appear that Model 20 has a $\beta$ greater than 1 while Models 1 and 13 have hard drives that suffer from early failures.
+\begin{figure}[H]
+\centering
+\includegraphics[height=8cm]{postbeta.pdf}
+\end{figure}
+
+\noindent Finally, to assess model fit, we overlay the fitted models with an 80\% credible interval ribbon on top of the left truncated adjusted Kaplan-Meier non-parametric estimate.  The emperical CDF is on the y-axis; the x-axis is in terms of hours.  Looking at Model 1 and Model 11 we can see the Weibull model captures the data quite well.  It apperas the credible interval for Model 1 is quite wide; however, the ribbon only covers a narrow range of about .01--and it should be noted that Model 1 only had 22 failures.  In contrast, Model 11 had 381 failures, and as expected the credible interval is thin with the data points hovering in the middle.
+
+\begin{figure}[H]
+  \centering
+  \begin{minipage}[b]{0.4\textwidth}
+    \includegraphics[width=\textwidth]{plot1.pdf}
+  \end{minipage}
+  \hfill
+  \begin{minipage}[b]{0.4\textwidth}
+    \includegraphics[width=\textwidth]{plot2.pdf}
+  \end{minipage}
+\end{figure}
+
+\noindent Some hard drive brands were not modeled as well.  Model 15 only had 3 failures and seen below the credible interval does not capture all of the data.  Model 21 had a cluster of failures at around 1000 hours that were not picked up in the model.  Again, though, with only 19 failures there is very little data to accuratly model the failure distribution.  
+
+\begin{figure}[H]
+  \centering
+  \begin{minipage}[b]{0.4\textwidth}
+    \includegraphics[width=\textwidth]{plot3.pdf}
+  \end{minipage}
+  \hfill
+  \begin{minipage}[b]{0.4\textwidth}
+    \includegraphics[width=\textwidth]{plot4.pdf}
+  \end{minipage}
+\end{figure}
+
+
 
 \bibliographystyle{plain}
 \bibliography{bibliography} 
