--- a/data.tex
+++ b/data.tex
@@ -1,25 +1,33 @@
 % tex for data
 
-\documentclass{article}
+\documentclass{scrartcl}
 \usepackage{url,graphicx,tabularx,array,amsmath,amssymb,amsthm,booktabs,float}
 \usepackage[margin=.65in]{geometry}
 \usepackage[toc,page]{appendix}
 \graphicspath{{C:/Users/Colin/Documents/GitHub/533-proj/}{C:\Users}}
+\title{Failure Time Distribution Estimation with Backblaze Hard Drive Data}
+\subtitle{Stat 533 Class Project}
+\author{Colin Lewis-Beck\\
+  \and
+  Eric Mittman}
 \begin{document}
-\noindent \textit{Data:}\\\\
+\noindent
+\maketitle
+\section*{Data}
 The data analyzed is hard drive testing data from the company, Backblaze.  Since 2013, Backblaze has been continuously spinning hard drives in controlled storage pods.  Hard drives are run till they fail or are right censored.  When a hard drive fails it is permanently removed from testing.  In addition, new hard drives are regularly added to the testing sample.  The latest data provided by Backblaze goes from January 1, 2015 to September 30, 2015.  Blackblaze provides over 70 variables on each hard drive; we wll focus on the following subset: an indicator variable for the last day the hard drive was in service before failing, the number of hours a hard drive has been on test, and the model/brand of each hard drive.\\\\
 The raw data download from Backblaze contained 54,398 unique drives.  Before analyzing the data, however, we removed certain observations.  Any models with fewer than 100 drives in testing were excluded.  Also, drives that failed in fewer than 20 days were removed.  There were some other bizarre observations in the data; for example, hard drives listed as being in test for over 10 years or drives that entered and exited the sample on the same day.  These bizarre observations were likely due to mis-coding and were dropped.  After cleaning the data we had a sample size of 52,811 total drives for analysis.\\\\
 The final sample included 21 hard drive models.  Below is a summary of the distribution of failures, and total testing time for each model.  The total number of failures was 1030.  The majority of those failures came from models 5, 7, 9, and 11.  Not surprising, model 11, which had the most failures also had the longest total testing time; however, this relationship was not uniform across models.  Model 1 had the 2nd longest total testing time, but relatively few failures.
 \begin{figure}[H]
 \centering
-\includegraphics[height=10cm]{sumstat1.pdf}
+\includegraphics[height=8cm]{sumstat1.pdf}
 \end{figure}
 \noindent We also examined the distribution of failure times.  The shape is slightly skewed to the right with the majority of failures occurring within 250 days. However, with over 50,000 of the hard drives start times left truncated it is specious to infer that the failire times suffer from infant mortality.   
 \begin{figure}[H]
 \centering
 \includegraphics[height=8cm]{failhist.pdf}
 \end{figure}
-\noindent \textit{Model:}\\\\
+
+\section*{Model}
 We used a Bayesian modeling approach to estimate the Weibull parameters for each model. Rather than modeling each model independently, we modeled the Weibull parameters hierarchically, to pool information and to provide better inferences, particularly for the brands that produced few failures. The model was fit using the rstan package in R \cite{stan}.
 
 We parameterized the Weibull in terms of a lower log quantile, $t_p$ (where $p=0.01$), and scale, $\sigma$. These were modeled by a Student's t with 5 degrees of freedom and a lognormal, respectively.
@@ -33,7 +41,16 @@ The following uninformative and vague priors were used for the hyperparameters.
 \[p(\mu_1,\mu_2) \propto 1\]
 \[\tau_1,\tau_2 \stackrel{ind.}{\sim} \operatorname{half-Cauchy}(0,10)\]
 
-\noindent \textit{Results:}\\\\
+The model for $Y_{mi}$ must be modified to accomodate the censoring and truncation patterns in the data. In the case of a failure that was observed and left-censored at $t_L$,
+\[Y_{mi} \sim \operatorname{TWeibull}(\eta_m, \beta_m, t_L, \infty),\]
+where $\operatorname{TWeibull}(\eta,\beta,a,b)$ is a truncated Weibull distribution with left and right truncation points a and b, respectively. For untruncated, right censored observations with censoring point $t_c$,
+\[Y_{mi} \sim \operatorname{Bernoulli}(1-\Phi(t_c)),\]
+Where $\Phi$ is the cdf for a $\operatorname{Weibull}(\eta_m,\beta_m)$ distribution.
+For observations that are both right censored and truncated,
+\[Y_{mi} \sim \operatorname{Bernoulii}(1-\Phi_{t_L}(t_c)),\]
+where $\Phi_{t_L}$ is the cdf for a left truncated Weibull distribution. 
+
+\section*{Results}
 Stan's Hamiltonian MCMC produces posterior distributions for each model's parameters.  Since $\eta$ is extremly far away from the majority of the data we focus on the posterior distribution of $t_p$ (where $p=0.01$) and $\beta$.  The plot below shows the median of the posterior estimate (in hours) along with error bars corresponding to the middle 50\% of the distribution.  Model 2 has the highest time to reach the .01 quatile, while Model 12 is the fastest.  The error bars are commensurate to the number of observations in the data.  Model 11 is the most tested model and has a narrow posterior while Model 2 has a range from about 2,500 to 13,000 hours.
 \begin{figure}[H]
 \centering
@@ -78,7 +95,7 @@ Stan's Hamiltonian MCMC produces posterior distributions for each model's parame
 \bibliography{bibliography} 
 \clearpage
 \begin{appendices}
-\section{Stan model:}
+\section*{Stan model}
 {\scriptsize
 \begin{verbatim}
 data {
