some polishing and added 2 refs

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -5,3 +5,16 @@
     year = {2015},
     url = {http://mc-stan.org/},
   }
+  
+  @book{meeker2014statistical,
+  title={Statistical methods for reliability data},
+  author={Meeker, William Q and Escobar, Luis A},
+  year={2014},
+  publisher={John Wiley \& Sons}
+}
+
+@misc{backblaze,
+  title = {Backblaze hard drive data sets.},
+  howpublished = {\url{https://www.backblaze.com/b2/hard-drive-test-data.html}},
+  note = {Accessed: 2016-4-1}
+}
